# -my_project

./: .env_template  .flake8  .gitignore  README.md  main.py  mylog.txt  mypy.ini  pyproject.toml
data/: .~lock.transactions_excel.xlsx#
htmlcov/: index.html
src/: data_loader.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  wiget.py
tests/: conftest.py  test_data_loader.py  test_decorator.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_utils.py  test_wiget.py
