[project]
name = "my-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Ann Molochko",email = "molochkoannav@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.black]
line-length = 119
extend-exclude = '''
/(
    \.git
    | __pycache__
    | venv
    | \.venv
)/
'''


[tool.isort]
line_length = 119
profile = "black"
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude =  ['venv', '.venv']

